middle-click-popup: fix suggestion color in dark mode

--- a/addons/middle-click-popup/userstyle.css
+++ b/addons/middle-click-popup/userstyle.css
@@ -68,7 +68,7 @@
 }
 
 .sa-mcp-input-suggestion {
-  color: hsla(225, 15%, 40%, 0.65);
+  color: var(--editorDarkMode-input-transparentText, hsla(225, 15%, 40%, 0.6));
 }
 
 .sa-mcp-preview-container {
